@startuml

hide circle
skinparam classAttributeIconSize 0


    class UpdateExpenseCommand {
        + UpdateExpenseCommand(String input)
        + void execute(List<Income> incomes, ExpenseList expenseList)
        - {static} void updateStorage(List<Income> incomes, ExpenseList expenseList)
        - {static} String getUpdatedCategory(String input, String currentCategory)
        - {static} String getUpdatedDescription(String input, String currentDescription)
        - {static} String getUpdatedDate(String input, String currentDate)
        - {static} Double getUpdatedAmount(String input, Double currentAmount)
    }


abstract class "{abstract}\nCommand" {
    + CommandType commandType
}

class Expense {
    + String getCategory()
    + Double getAmount()
    + String getDescription()
    + String getDate()
    + void setCategory(String category)
    + void setAmount(Double amount)
    + void setDescription(String description)
    + void setDate(String date)
}

class ExpenseList {
    + int getSize()
    + Expense get(int index)
    + void updateTotalExpenses()
}

class Storage {
    + void saveData(List<Income> incomes, ExpenseList expenseList)
}

class DateValidator {
    + static boolean isValidDate(String date)
}

class FinanceException {
}

UpdateExpenseCommand --|> "{abstract}\nCommand" : extends
UpdateExpenseCommand --> Expense : updates
UpdateExpenseCommand --> ExpenseList : modifies
UpdateExpenseCommand --> Storage : uses
UpdateExpenseCommand --> DateValidator : uses
UpdateExpenseCommand --> FinanceException : throws

@enduml